Data Model refactor. Add Mutable/ReadOnly Interfaces. - Improve AddExperimentalData screen with validation. - Improve Experimental Data and Model Tables with localized validation messages. - Fix CanvasRenderPolygonChart.kt - Add ObservablePicket, ObservableSection models