@@ -2,6 +2,7 @@ package ru.nucodelabs.geo.ves.calc.initialModel;
 
 import ru.nucodelabs.geo.ves.ExperimentalData;
 import ru.nucodelabs.geo.ves.ModelLayer;
+import ru.nucodelabs.geo.ves.ReadOnlyExperimentalSignal;
 
 import java.util.ArrayList;
 import java.util.List;
@@ -13,17 +14,24 @@ public class SimpleInitialModel {
     private SimpleInitialModel() {
     }
 
-    public static List<ModelLayer> threeLayersInitialModel(List<ExperimentalData> experimentalData) {
+    public static List<ModelLayer> threeLayersInitialModel(List<ReadOnlyExperimentalSignal> experimentalData) {
         if (experimentalData.size() <= 3) {
             throw new IllegalStateException("Для построения стартовой модели требуется ≥ 4 измерений, было " + experimentalData.size());
         }
 
         List<ExperimentalData> logExperimentalData = experimentalData.stream()
-            .map(data -> copy(data).ab2(Math.log(data.getAb2())).build())
+            .map(data -> new ExperimentalData(
+                Math.log(data.getAb2()),
+                data.getMn2(),
+                data.getAmperage(),
+                data.getVoltage(),
+                data.getResistanceApparent(),
+                data.getErrorResistanceApparent(),
+                data.isHidden()
+            ))
             .toList();
-        int pointsCnt = logExperimentalData.size();
-        double ab2min = logExperimentalData.get(0).getAb2();
-        double ab2max = logExperimentalData.get(pointsCnt - 1).getAb2();
+        double ab2min = logExperimentalData.getFirst().getAb2();
+        double ab2max = logExperimentalData.getLast().getAb2();
         double ab2range = ab2max - ab2min;
         List<List<ExperimentalData>> logSplitData = new ArrayList<>();
         logSplitData.add(logExperimentalData.stream()
@@ -51,14 +59,14 @@ public class SimpleInitialModel {
                 .average()
                 .orElse(0);
             if (i > 0) {
-                prevLast = Math.exp(logSplitData.get(i - 1).get(logSplitData.get(i - 1).size() - 1).getAb2());
+                prevLast = Math.exp(logSplitData.get(i - 1).getLast().getAb2());
             } else {
                 prevLast = 0;
             }
             //От последнего в этом слою отнимаем последний в прошлом
-            modelLayers.add(new ModelLayer(Math.exp(list.get(list.size() - 1).getAb2()) - prevLast, avg, false, false));
+            modelLayers.add(new ModelLayer(Math.exp(list.getLast().getAb2()) - prevLast, avg, false, false));
         }
-        modelLayers.set(modelLayers.size() - 1, copy(modelLayers.get(modelLayers.size() - 1)).power(0).build());
+        modelLayers.set(modelLayers.size() - 1, copy(modelLayers.getLast()).power(0).build());
         return modelLayers;
     }
 }
